# status

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
src/: MainWindow.cpp  MainWindow.h  ManageDialog.cpp  ManageDialog.h  StatusData.h  StatusManager.cpp  StatusManager.h  main.cpp
